k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hosekishops-ingress
spec:
  rules:
    - host: hosekishops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-store
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: frontend-admin
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
